--- a/2023/.editorconfig
+++ b/2023/.editorconfig
@@ -19,3 +19,4 @@ dotnet_diagnostic.CA1851.severity = warning # CA1851: Possible multiple enumerat
 
 dotnet_diagnostic.CA1304.severity = none # CA1304: Specify CultureInfo
 dotnet_diagnostic.CA1305.severity = none # CA1305: Specify IFormatProvider
+dotnet_diagnostic.CA2208.severity = none # CA1305: Instantiate argument exceptions correctly
